more api specs
