# app/Http/Controllers/MastoriController.php
@@ -12,7 +12,6 @@ use App\Mastori;
 use App\User;
 
 use Auth;
-use Swagger\Annotations as SWG;
 
 
 
@@ -81,31 +80,19 @@ class MastoriController extends Controller
    *     description="Adds a new mastori in database",
    *     produces={"application/json"},
    *     @SWG\Parameter(
-   *         description="Access token",
-   *         in="header",
-   *         name="Authorization",
-   *         required=true,
-   *         type="string"
-   *     ),
-   *     @SWG\Parameter(
    *         name="body",
    *         in="body",
    *         required=true,
-   *         @SWG\Schema(ref="#/definitions/mastori")
+   *         @SWG\Schema(ref="#/definitions/mastoriPost")
    *     ),
    *     @SWG\Response(
-   *         response=200,
+   *         response=201,
    *         description="Returns created Mastori object",
    *         @SWG\Schema(ref="#/definitions/mastori")
    *     ),
    *     @SWG\Response(
    *         response="400",
-   *         description="unauthorized",
-   *         @SWG\Schema(ref="#/definitions/errorModel")
-   *     ),
-   *     @SWG\Response(
-   *         response="500",
-   *         description="error",
+   *         description="validation errors",
    *         @SWG\Schema(ref="#/definitions/errorModel")
    *     )
    * )
@@ -113,7 +100,6 @@ class MastoriController extends Controller
     public function store(Request $request)
     {
         $data = $request->all();
-
         $validator = $this->validator($data);
         if ($validator->fails()) {
             return response(['errors' => $validator->messages()], 400);
@@ -147,6 +133,52 @@ class MastoriController extends Controller
         return response($newMastori->load('user')->load('professions'), 201);
     }
 
+
+
+
+  /**
+    *@SWG\Get(
+    *     path="/mastoria/{id}",
+    *     @SWG\Parameter(
+    *         description="ID of mastorito get",
+    *         in="path",
+    *         name="id",
+    *         required=true,
+    *         type="integer"
+    *     ),
+    *     @SWG\Parameter(
+    *         description="Access token",
+    *         in="header",
+    *         name="Authorization",
+    *         required=true,
+    *         type="string"
+    *     ),
+    *     operationId="getmastori",
+    *     tags={"mastoria"},
+    *     description="Fetches a mastori",
+    *     produces={"application/json"},
+    *     @SWG\Response(
+    *         response=200,
+    *         description="Mastori response",
+    *         @SWG\Schema(ref="#/definitions/mastori")
+    *     ),
+    *     @SWG\Response(
+    *         response="400",
+    *         description="unauthorized",
+    *         @SWG\Schema(ref="#/definitions/errorModel")
+    *     ),
+    *     @SWG\Response(
+    *         response="404",
+    *         description="no found",
+    *         @SWG\Schema(ref="#/definitions/errorModel")
+    *     ),
+    *     @SWG\Response(
+    *         response="500",
+    *         description="error",
+    *         @SWG\Schema(ref="#/definitions/errorModel")
+    *     )
+    * )
+    */
     /**
      * Display the specified resource.
      *
@@ -159,6 +191,54 @@ class MastoriController extends Controller
         return Mastori::findOrFail($id)->load('user');
     }
 
+
+
+
+
+  /**
+    *@SWG\Put(
+    *     path="/mastoria/{id}",
+    *     @SWG\Parameter(
+    *         description="ID of mastori to update",
+    *         in="path",
+    *         name="id",
+    *         required=true,
+    *         type="integer"
+    *     ),
+    *     @SWG\Parameter(
+    *         description="Access token",
+    *         in="header",
+    *         name="Authorization",
+    *         required=true,
+    *         type="string"
+    *     ),
+    *     operationId="editmastori",
+    *     tags={"mastoria"},
+    *     description="Edits a mastori",
+    *     produces={"application/json"},
+    *     @SWG\Parameter(
+    *         name="body",
+    *         in="body",
+    *         required=true,
+    *         @SWG\Schema(ref="#/definitions/mastori")
+    *     ),
+    *     @SWG\Response(
+    *         response=200,
+    *         description="Mastori response",
+    *         @SWG\Schema(ref="#/definitions/mastori")
+    *     ),
+    *     @SWG\Response(
+    *         response="401",
+    *         description="unauthorized",
+    *         @SWG\Schema(ref="#/definitions/errorModel")
+    *     ),
+    *     @SWG\Response(
+    *         response="400",
+    *         description="validation errors",
+    *         @SWG\Schema(ref="#/definitions/validationsErrorsModel")
+    *     )
+    * )
+    */
     /**
      * Update the specified resource in storage.
      *
